# surroforge

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: bring-your-own-simulator.md
examples/elmer_thermal_plate/: README.md  build_case.py
examples/field_surrogate/: README.md
examples/thermal_plate_python/: run_demo.py
src/surroforge/: __init__.py  cli.py  design.py  forge.py  metrics.py  schemas.py  store.py
src/surroforge/active/: __init__.py  acquisition.py
src/surroforge/models/: __init__.py  base.py  ensemble.py  field_autoencoder.py  mlp.py  sklearn.py
src/surroforge/report/: __init__.py  html.py
src/surroforge/sampling/: __init__.py  core.py
src/surroforge/simulators/: __init__.py  base.py  elmer.py  python.py  subprocess.py
src/surroforge/trust/: __init__.py  conformal.py  ood.py
tests/: test_cli.py  test_design_sampling.py  test_end_to_end.py  test_end_to_end_elmer.py  test_forge_store_report.py  test_models_torch.py  test_simulators.py  test_trust_active.py
