[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "surroforge"
version = "0.1.0"
description = "Build uncertainty-aware neural surrogates from expensive physics simulators."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Tayor" }]
keywords = [
  "surrogate-modeling",
  "physics-simulation",
  "pytorch",
  "active-learning",
  "fem",
  "elmer",
  "scientific-machine-learning",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "h5py>=3.8",
  "numpy>=1.24",
  "pandas>=2.0",
  "pydantic>=2.0",
  "pyyaml>=6.0",
  "rich>=13.0",
  "scipy>=1.10",
  "typer>=0.12,<0.18",
]

[project.optional-dependencies]
torch = ["torch>=2.2"]
elmer = ["gmsh", "pyelmer"]
vtk = ["meshio>=5.3", "pyvista>=0.44,<0.47"]
optuna = ["optuna"]
sklearn = ["scikit-learn"]
all = [
  "gmsh",
  "meshio>=5.3",
  "optuna",
  "pyelmer",
  "pyvista>=0.44,<0.47",
  "scikit-learn",
  "torch>=2.2",
]
dev = [
  "build>=1.2",
  "mypy>=1.10",
  "pytest>=8.0",
  "ruff>=0.6",
  "twine>=5.0",
  "types-PyYAML>=6.0",
]

[project.scripts]
surroforge = "surroforge.cli:app"

[project.urls]
Homepage = "https://github.com/tayor/surroforge"
Repository = "https://github.com/tayor/surroforge"
Issues = "https://github.com/tayor/surroforge/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/surroforge"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
markers = [
  "e2e: end-to-end workflow validation tests",
  "torch: tests that require the optional torch extra",
  "elmer: tests that require a local Elmer installation",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.10"
packages = ["surroforge"]
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
